<resources>
    <string name="app_name">WineWatch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">username/email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_in">Sign in</string>
    <string name="ib_clear_content_description">This is a text clear button.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Winery</string>
    <string name="title_section2">Attention</string>
    <string name="title_section3">Recent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_more">More...</string>
    <string name="action_add">Add</string>

    <!--Tank details page-->
    <string name="tank_detail_image">tank temperature picture</string>
    <string name="default_text">Null</string>
    <string name="tank_detail_table_titles_winery_name"><b>Winery Name</b></string>
    <string name="tank_detail_table_titles_tank_id"><b>Tank ID</b></string>
    <string name="tank_detail_table_titles_fermentation_name"><b>Fermentation</b></string>
    <string name="tank_detail_table_titles_update_time"><b>Update Time</b></string>
    <string name="tank_detail_table_titles_battery"><b>Battery Remain</b></string>
    <string name="tank_detail_table_titles_interval"><b>Interval</b></string>

    <!--pull to refresh-->
    <string name="pull_to_refresh">Pull down to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">refreshing…</string>
    <string name="not_updated_yet">Not updated yet</string>
    <string name="updated_at">Last update is before %1s </string>
    <string name="updated_just_now">Updated just now</string>
    <string name="time_error">Time is too short</string>

    <!--Global values-->
    <string name="winery_name">winery name</string>
    
    <!--Add Fermentation Table-->
    <string name="add_fermentation_winery_name">Winery Name</string>
    <string name="add_fermentation_winery_id">Winery ID</string>
    <string name="add_fermentation_user_name">User Name</string>
    <string name="add_fermentation_base_id">Base ID</string>
    <string name="add_fermentation_mote_id">Mote ID</string>
    <string name="add_fermentation_tank_id">Tank ID</string>
    <string name="add_fermentation_fermentation_type">Fermentation Type</string>
    <string name="add_fermentation_button_okay">Add</string>
    <string name="add_fermentation_button_confirm">Confirm</string>
    <string name="add_fermentation_button_cancel">Cancel</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notification_learning">NotificationLearningActivity</string>
    <string name="title_activity_add_fermentation">AddFermentationActivity</string>
    <string name="title_activity_tank_more_info_activty">TankMoreInfoActivty</string>
    <string name="title_activity_graph">GraphActivity</string>
</resources>
