<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="au.edu.adelaide.cs.winewatch.DetailsActivity">

    <RelativeLayout
        android:id="@+id/tank_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ProgressBar
            android:id="@+id/detail_process"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            />

        <ImageView
            android:id="@+id/temperature_tank"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/tank_detail_image"
            />

        <TableLayout
            android:id="@+id/tank_detail_text_description"
            android:layout_below="@+id/temperature_tank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="#000000"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/table_border_width"
                >

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:text="@string/tank_detail_table_titles_winery_name"
                    android:layout_marginRight="@dimen/table_border_width"
                    />

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:id="@+id/detail_winery_name"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/table_border_width"
                    android:layout_weight="1"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/table_border_width"
                android:layout_marginRight="@dimen/table_border_width"
                android:layout_marginLeft="@dimen/table_border_width"
                >

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:text="@string/tank_detail_table_titles_fermentation_name"
                    android:layout_marginRight="@dimen/table_border_width"
                    />

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:id="@+id/detail_fermentation_name"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/table_border_width"
                    android:layout_weight="1"
                    />

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:text="@string/tank_detail_table_titles_tank_id"
                    android:layout_marginRight="@dimen/table_border_width"
                    />

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:id="@+id/detail_tank_id"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/table_border_width"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_border_width"
                android:layout_marginRight="@dimen/table_border_width"
                android:layout_marginLeft="@dimen/table_border_width">

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:text="@string/tank_detail_table_titles_update_time"
                    android:layout_marginRight="@dimen/table_border_width"
                    />

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:id="@+id/detail_update_time"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_border_width"
                android:layout_marginRight="@dimen/table_border_width"
                android:layout_marginLeft="@dimen/table_border_width">

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:text="@string/tank_detail_table_titles_battery"
                    android:layout_marginRight="@dimen/table_border_width"
                    />

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:id="@+id/detail_battery"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_border_width"
                android:layout_marginRight="@dimen/table_border_width"
                android:layout_marginLeft="@dimen/table_border_width">

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:text="@string/tank_detail_table_titles_interval"
                    android:layout_marginRight="@dimen/table_border_width"
                    />

                <TextView
                    android:background="@color/tank_detail_table_column_background_color"
                    android:id="@+id/detail_interval"
                    android:padding="@dimen/table_text_padding"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
            </TableRow>
        </TableLayout>
        <TableLayout
            android:id="@+id/tank_detail_text_recommendation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:layout_below="@+id/tank_detail_text_description">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/table_border_width"
                android:layout_marginRight="@dimen/table_border_width"
                android:layout_marginLeft="@dimen/table_border_width">

                <TextView
                    android:layout_weight="1"
                    android:background="@color/tank_detail_table_column_background_color"
                    android:text="Recommendation contents"
                    android:padding="@dimen/table_text_padding"
                    />

            </TableRow>

        </TableLayout>

    </RelativeLayout>
</ScrollView>